--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,8 +7,7 @@
   <title>Rivas.Recipes</title>
 </head>
 <body>
-  hello
+  <%- include('../partials/header.ejs')%>
   <%- body %>
-  there
   </body>
 </html>
