added search and add recipes functions

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <a href="/"> Rivas Recipes</a>
     <ul>
       <li><a href="/authors">Recipes</a></li>
-      <li><a href="/authors/new">walters gay</a></li>
+      <li><a href="/authors/new">Add Recipe</a></li>
       </ul>
     </nav>
 </header>
