--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,1 +1,9 @@
-All Recipes 
+<h2> Search recipes </h2> 
+<form action="/authors" method="GET">
+ <label> Name </label>
+ <input type="text" name="name" value= "<%= searchOptions.name %>">
+ <button type="submit">Search</button>
+ </form>
+ <% authors.forEach(author => { %>
+  <div><%= author.name %></div>
+  <% }) %>
