--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,7 +7,8 @@
   <title>Rivas.Recipes</title>
 </head>
 <body>
-  <%- include('../partials/header.ejs')%>
+  <%- include('../partials/header.ejs') %>
+  <%- include('../partials/errorMessage.ejs') %> 
   <%- body %>
   </body>
 </html>
