--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,14 @@
 Main login/register page 
+
+
+<header>
+  <nav>
+    <a href="/"> Rivas Recipes</a>
+    <ul>
+      <li><a href="/authors">Recipes</a></li>
+      <li><a href="/authors/new">Add Chef</a></li>
+      <li><a href="/books">Books<Book/a></li>
+      <li><a href="/books/new">Add Recipe </a></li>
+      </ul>
+    </nav>
+</header>
