--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,9 @@
     <a href="/"> Rivas Recipes</a>
     <ul>
       <li><a href="/authors">Recipes</a></li>
-      <li><a href="/authors/new">Add Recipe</a></li>
+      <li><a href="/authors/new">Add Author</a></li>
+      <li><a href="/books">Books<Book/a></li>
+      <li><a href="/books/new">Add Book </a></li>
       </ul>
     </nav>
 </header>
