created upload addition

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@ Main login/register page
     <ul>
       <li><a href="/authors">Recipes</a></li>
       <li><a href="/authors/new">Add Chef</a></li>
-      <li><a href="/books">Books<Book/a></li>
+      <li><a href="/books">Recipes<Book/a></li>
       <li><a href="/books/new">Add Recipe </a></li>
       </ul>
     </nav>
