--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,9 +1,10 @@
-<h2> Search recipes </h2> 
+<h2>Search Authors</h2>
 <form action="/authors" method="GET">
- <label> Name </label>
- <input type="text" name="name" value= "<%= searchOptions.name %>">
- <button type="submit">Search</button>
- </form>
- <% authors.forEach(author => { %>
+  <label>Name</label>
+  <input type="text" name="name" value="<%= searchOptions.name %>">
+  <button type="submit">Search</button>
+</form>
+<br>
+<% authors.forEach(author => { %>
   <div><%= author.name %></div>
-  <% }) %>
+<% }) %>
