--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,10 +2,10 @@
   <nav>
     <a href="/"> Rivas Recipes</a>
     <ul>
-      <li><a href="/authors">Recipes</a></li>
-      <li><a href="/authors/new">Add Author</a></li>
-      <li><a href="/books">Books<Book/a></li>
-      <li><a href="/books/new">Add Book </a></li>
+      <li><a href="/authors">Chefs</a></li>
+      <li><a href="/authors/new">Add Chef</a></li>
+      <li><a href="/books">Recipe<Book/a></li>
+      <li><a href="/books/new">Add Recipe </a></li>
       </ul>
     </nav>
 </header>
