--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,30 +1,9 @@
-<h2>Search Recipe</h2>
-<form action="/books" method="GET">
-  <div>
-    <label>Name</label>
-    <input type="text" name="title" value="<%= searchOptions.title %>" />
-  </div>
-  <div>
-    <!-- <label>Published After</label>
-    <input
-      type="date"
-      name="publishedAfter"
-      <!-- value="<%= searchOptions.publishedAfter %>"
-    /> --> 
-  </div>
-  <div>
-    <!-- <label>Published Before</label>
-    <input
-      type="date"
-      name="publishedBefore"
-      <!-- value="<%= searchOptions.publishedBefore %>" -->
-    <!-- /> --> 
-  </div>
-  <button type="submit">Search</button>
-</form>
+<h2>Recently Added</h2>
 <div>
   <% books.forEach(book => { %>
-  <img height="150" width="100" src="<%= book.coverImagePath %>" />
+    <a href="/books/<%= book.id %>">
+      <img height="150" width="100" src="<%= book.coverImagePath %>">
+    </a>
   <% }) %>
 </div>
  
