--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,4 +1,19 @@
-<h2>Recently Added</h2>
+<h2>Search Book</h2>
+<form action="/books" method="GET">
+  <div>
+    <label>Title</label>
+    <input type="text" name="title" value="<%= searchOptions.title %>">
+  </div>
+  <div>
+    <label>Published After</label>
+    <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
+  </div>
+  <div>
+    <label>Published Before</label>
+    <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
+  </div>
+  <button type="submit">Search</button>
+</form>
 <div>
   <% books.forEach(book => { %>
     <a href="/books/<%= book.id %>">
