--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header>
   <nav>
-    <a href="/"> Rivas Recipes</a>
+    <a href="/">Rivas-Recipes</a>
     <ul>
-      <li><a href="/authors">Chefs</a></li>
-      <li><a href="/authors/new">Add Chef</a></li>
-      <li><a href="/books">Recipe<Book/a></li>
-      <li><a href="/books/new">Add Recipe </a></li>
-      </ul>
-    </nav>
+      <li><a href="/authors">Authors</a></li>
+      <li><a href="/authors/new">Add Author</a></li>
+      <li><a href="/books">Books</a></li>
+      <li><a href="/books/new">Add Book</a></li>
+    </ul>
+  </nav>
 </header>
