--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,8 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="/">Rivas-Recipes</a>
-      <ul>
-        <li><a href="/authors">Authors</a></li>
-        <li><a href="/authors/new">Add Author</a></li>
-        <li><a href="/books">Books</a></li>
-        <li><a href="/books/new">Add Book</a></li>
-      </ul>
-    </nav>
-  </header>
-</body>
-</html>
+<h2>Recently Added</h2>
+<div>
+  <% books.forEach(book => { %>
+    <a href="/books/<%= book.id %>">
+      <img height="150" width="100" src="<%= book.coverImagePath %>">
+    </a>
+  <% }) %>
+</div>
