--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <a href="/">Rivas-Recipes</a>
+    <a href="/">Rivas Recipes</a>
     <ul>
       <li><a href="/authors">Authors</a></li>
       <li><a href="/authors/new">Add Author</a></li>
