--- a/public/stylesheets/shared/main.css
+++ b/public/stylesheets/shared/main.css
@@ -1,4 +1,11 @@
-nav{
-  font-family: 'Cambria, Cochin, Georgia, Times, 'Times New Roman', serif';
+@import 'shared/variables.css';
+@import 'shared/fonts/css';
+
+:root{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 100px;
-} 
+}
+ body{
+   background: linear-gradient(to right,var(--color-background-dark),
+   var(--color-background-light));
+ }
