--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/deleteForm',
             { url: `/authors/${author.id}` }) %>
 <% if (booksByAuthor.length > 0) { %>
-  <h2>Books By Author</h2>
+  <h2>Recipes by Chefs</h2>
   <% booksByAuthor.forEach(book => { %>
     <a href="/books/<%= book.id %>">
       <img height="150" width="100" src="<%= book.coverImagePath %>">
